# glintory

./: .ai-conventions.md  .env.example  .gitignore  Dockerfile  LICENSE  README.ja.md  README.md  compose.yaml  job_log.txt  job_log_2.txt  pyproject.toml  submission-glintory.attestation.json  submission-glintory.zip.sha256
.github/: dependabot.yml
.github/workflows/: ci.yml  glintory-automation.yml  local-llm-smoke.yml
config/: github-source.example.json  github-source.public.json  hackernews-source.example.json  hackernews-source.public.json  public-sources.json  rss-source.example.json  rss-source.public.json
data/: glintory.sqlite3.before_issue_9a1
dist_local/: diagnostics.html  index.html  sitemap.xml
dist_local/assets/: app.css
dist_local/opportunities/: index.html
docs/: jurypress-integration.md  public-data-contract-v1.md
docs/current/: issue_10b_1_local_llm_refactoring.md  issue_6_signal_list_ui_fts5.md  opportunity_intelligence_v4.md
migrations/: env.py
migrations/versions/: 11ed027cca91_add_publication_contract_and_runs.py  14bea315aff7_add_retired_at_and_retired_reason_to_.py  187355bd71bf_add_opportunity_clustering_fields.py  45dd6b740edc_add_opportunity_review_fields.py  74de87b89dff_add_discovery_models_and_signal_columns.py  7d59025ee7ba_add_generalizability_to_opportunity.py  7fa513398108_convert_clustered_to_clustering.py  83bcf9995780_add_v2_quality_and_localization_fields.py  857f65e5567e_add_opportunity_scoring_fields.py  9d9d5e869311_add_budget_error_code.py  9de005508393_add_unique_constraint_to_signals.py  b68c7eff7f71_add_scheduler_tables.py  cced3ad721f1_create_initial_schema.py  d445f5753c74_add_source_ops_fields.py  da4fadf39e75_signals_fts.py  dddafacb2e7a_add_opportunity_enrichment_localizations.py  e04f3b756c75_add_gate_fields.py  (+3 more)
scripts/: create_submission.py  github_issue_notifier.py  github_state_store.py  insert_fixture_db.py  run_discovery_migration.py  smoke_github_collector.py  smoke_github_persistence.py  smoke_hackernews_persistence.py  smoke_rss_persistence.py  submission_pipeline.py  verify_rebuild_stats.py
tests/: conftest.py  test_config.py  test_constraints.py  test_create_submission.py  test_entrypoint.py  test_migration.py  test_migration_ops.py  test_public_contract.py  test_readiness.py
(+226 files in other folders)
