[project]
name = "glintory"
version = "0.1.0"
description = "Find the signals worth building on."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.12,<7",
]

[project.scripts]
glintory = "glintory.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pyright>=1.1.360",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "ARG", "PTH", "ERA", "PL"]
ignore = ["E501", "PLR2004", "B008", "PLW0603", "PLR0913", "PLR0912", "PLR0915", "ARG001", "RET504"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.12"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
filterwarnings = [
    "error",
    # TODO: Remove this filter once FastAPI/Starlette resolves the internal TestClient deprecation warning upstream.
    "ignore:Using .*httpx.* with .*starlette.testclient.* is deprecated:starlette.exceptions.StarletteDeprecationWarning",
    "ignore:To avoid breaking existing software.*:DeprecationWarning",
]
